@@ -1,3 +1,12 @@
+2002-04-03  Jani Monoses <jani@iv.ro>
+
+	* src/flash_lock_block.c (flash_lock_block): 
+	* src/flash_unlock_block.c (flash_unlock_block): 
+	* src/flash_erase_block.c (flash_erase_block): 
+	* src/flash_query.c (flash_query): 
+	* src/flash_program_buf.c (flash_program_buf): 
+	Cache enabling and disabling are already handled by generic flash
+	
 2002-08-12  Mark Salter  <msalter@redhat.com>
 
 	* src/flash_unlock_block.c: Add synchronous strataflash support.
